--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+div{
+    background-color: #232323;
+    color:  #e5e4e9;
+}
+h1, h2{
+    color: #0db4ba;
+}
 html{
     height:100%;
     margin:0;
@@ -10,7 +17,7 @@ body{
 }
 a{
     text-decoration:none;
-    color:#FF0F00
+    color:#ff8853
 }
 a:hover{
     text-decoration:underline
@@ -23,7 +30,8 @@ hr{
 }
 #author-name{
     font-size:30px;
-    color:#272727;
+    /*color:#272727;*/
+    color: #d44032;;
     display:inline-block
 }
 .navbar{
