--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
-div{
+div {
     background-color: #232323;
     color:  #e5e4e9;
+    font-size: 106%;
+    line-height: 115%;
 }
 h1, h2{
     color: #0db4ba;
+    line-height: 105%;
 }
 html{
     height:100%;
@@ -57,7 +60,7 @@ hr{
     float:right
 }
 .container{
-    max-width:700px;
+    max-width:800px;
     margin:auto
 }
 .wrapper{
@@ -65,7 +68,7 @@ hr{
 }
 @media (max-width: 800px){
     .container{
-        max-width:600px;
+        max-width:800px;
         transition:0.3s ease all
     }
 }
