--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 div {
     background-color: #232323;
     color:  #e5e4e9;
-    font-size: 106%;
+    font-size: 105%;
     line-height: 107.5%;
 }
 h1, h2{
@@ -177,11 +177,11 @@ td a{
     width:100%
 }
 tr:hover{
-    background-color:#f5f5f5
+    background-color:#232323
 }
 .collapsible{
-    background-color:#f5f5f5;
-    color:#272727;
+    background-color:#232323;
+    color:#ffffff;
     cursor:pointer;
     padding:18px;
     width:100%;
@@ -191,7 +191,7 @@ tr:hover{
     font-size:15px
 }
 .active,.collapsible:hover{
-    background-color:#c1c0c0
+    background-color:#232323
 }
 .collapsible:after{
     content:'\002B';
@@ -204,9 +204,9 @@ tr:hover{
     content:"\2212"
 }
 .colcontent{
+    background-color:#232323
     padding:0 18px;
     max-height:0;
     overflow:hidden;
     transition:max-height 0.2s ease-out;
-    background-color:#f1f1f1
 }
